fix UX spacing in galeries

--- a/src/App.css
+++ b/src/App.css
@@ -110,14 +110,16 @@ header {
 
 .seed-gallery {
   display: grid;
-  /*grid-template-columns: repeat(auto-fit, minmax(300px,1fr));*/
   grid-template-columns: 1fr 1fr 1fr;
   gap: 1.2rem;
   width: 100%;
   margin-bottom: 1.2rem;
 }
 
-
+.seed-gallery.spaced {
+  gap: 3rem;
+  padding: 0.5rem;
+}
 .seed-item {
   background: var(--gray-soft);
   border-radius: var(--radius);
